styles/_tools.scss
@use 'variables' as *;

.app-tools {
  display: inline-flex;
  align-items: center;
  gap: 12px;
  position: relative;
  margin-left: 20px;
  user-select: none;
  cursor: default;
  .dismissable-overlay {
    display: none;
    z-index: 10;
  }
  &.app-tools-open .dismissable-overlay {
    display: block;
  }
}

.app-tools-menu-toggle,
.app-tools-analytics-toggle {
  display: inline-flex;
  justify-content: center;
  align-items: center;
  position: relative;
  --icon-size: 20px;
  width: var(--icon-size);
  height: var(--icon-size);
  margin: 0;
  border-width: 0;
  padding: 0;
  background: none;
  color: #fff;
  &:hover:active,
  &.app-tools-control-active,
  .app-tools-open & {
    z-index: 100;
    color: var(--color-blue);
  }
  &:focus {
    outline-width: 0;
  }
  svg {
    fill: currentColor;
    display: block;
    width: inherit;
    height: inherit;
  }
}

.app-tools-analytics-toggle {
  svg {
    transform: scale(1.15);
    transform-origin: center;
  }
}

.app-tools-menu {
  display: none;
  position: absolute;
  min-width: 100px;
  top: 100%;
  z-index: 10;
  --menu-padding-x: 12px;
  --menu-padding-y: 8px;
  left: auto;
  right: -var(--menu-padding-x);
  margin: 0;
  margin-top: calc(var(--panel-arrow-size) * 1.5);
  padding: 0;
  border-radius: var(--app-border-radius);
  background-color: #fff;
  color: #000;
  text-align: left;
  box-shadow: var(--panel-shadow);
  font-weight: 400;
  font-size: 14px;
  white-space: nowrap;
  @media (min-width: $app-hybrid-max-width) {
    left: -var(--menu-padding-x);
    right: auto;
  }
  .app-tools-open & {
    display: block;
    z-index: 100;
  }
  li {
    list-style-type: none;
    &:first-child {
      border-top-left-radius: inherit;
      border-top-right-radius: inherit;
      &:before {
        pointer-events: none;
        content: '';
        display: inline-block;
        position: absolute;
        top: -var(--panel-arrow-size);
        left: auto;
        right: var(--menu-padding-x);
        width: 0;
        height: 0;
        border: solid var(--panel-arrow-size) transparent;
        border-top-width: 0;
        border-bottom-color: #fff;
        @media (min-width: $app-hybrid-max-width) {
          left: var(--menu-padding-x);
          right: auto;
        }
      }
    }
    &:last-child {
      border-bottom-left-radius: inherit;
      border-bottom-right-radius: inherit;
    }
    &:hover {
      background-color: var(--color-blue);
      color: #fff;
      &:before {
        border-bottom-color: var(--color-blue);
      }
    }
  }
  li > * {
    display: block;
    padding: var(--menu-padding-y) var(--menu-padding-x);
    color: inherit;
    text-decoration: none;
  }
}

.app-control-import-input {
  position: absolute;
  top: -10000px;
  left: -10000px;
}

